# jvm-mcp-server

./: .coverage  .env  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Native_TODO.md  README.md  README_en.md  README_zh.md  TODO.md  mcp.md  pyproject.toml  requirements.txt
.cursor/: mcp copy.json  mcp.json
config/: arthas.json
demo/: arthas_mcp_server.py
doc/: available_tools.md
src/jvm_mcp_server/: __init__.py  __main__.py  arthas.py  config.py  connection_pool.py  server.py
src/jvm_mcp_server/jmx/: __init__.py
src/jvm_mcp_server/native/: __init__.py  base.py
src/jvm_mcp_server/native/tools/: __init__.py  class_info.py  javap.py  jcmd.py  jinfo.py  jmap.py  jps.py  jstack.py  jstat.py
src/jvm_mcp_server/tests/: test_arthas.py  test_server.py
src/jvm_mcp_server/tests/test_native/: __init__.py  test_class_info.py  test_javap.py  test_jcmd.py  test_jinfo.py  test_jmap.py  test_jps.py  test_jstack.py  test_jstat.py
