[project]
name = "jvm-mcp-server"
version = "0.1.0"
description = "A JVM monitoring MCP server based on Arthas"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]>=1.3.0",
    "telnetlib3>=2.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
