[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jvm-mcp-server"
version = "0.1.1"
description = "基于Arthas的JVM监控MCP服务器实现"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["java", "jvm", "monitoring", "arthas", "mcp"]
authors = [
    { name = "xzq-xu", email = "1325732643@qq.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "paramiko>=3.5.1",
]

[project.scripts]
jvm-mcp-server = "jvm_mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/xzq-xu/jvm-mcp-server"
Repository = "https://github.com/xzq-xu/jvm-mcp-server.git"
Issues = "https://github.com/xzq-xu/jvm-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jvm_mcp_server"]

[tool.hatch.version]
path = "src/jvm_mcp_server/__init__.py" 
